--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -3,5 +3,17 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        
+        {
+            "name": "(lldb) Adjuntar",
+            "type": "cppdbg",
+            "request": "attach",
+
+            "program":"$fileDirname}/bin/${main.out",
+            "processId": "${command:pickProcess}",
+            "MIMode": "lldb"
+        }
+
+    ]
 }
