--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -2,6 +2,7 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    //    ${workspaceFolder}/a.out.
     "version": "0.2.0",
     "configurations": [
         
@@ -9,8 +10,7 @@
             "name": "(lldb) Adjuntar",
             "type": "cppdbg",
             "request": "attach",
-
-            "program":"$fileDirname}/bin/${main.out",
+            "program":"Documentos/GitHub/IoT/programasC/bin/$main",
             "processId": "${command:pickProcess}",
             "MIMode": "lldb"
         }
