--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -9,8 +9,8 @@
             "name": "(lldb) Adjuntar",
             "type": "cppdbg",
             "request": "attach",
-            "program":"${fileDirname}${main.out",
-         //   "program":"${fileDirname}/bin/$main.out",
+           // "program":"${fileDirname}/$main.out",
+            "program":"${fileDirname}/main.out",
             "processId": "${command:pickProcess}",
             "MIMode": "lldb"
         }
