--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,37 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-         //   "name": "(lldb) Adjuntar",
-            "name": "(gdb) Adjuntar",
+            "name": "(lldb) Adjuntar",
             "type": "cppdbg",
             "request": "attach",
-  
-           "program": "${workspaceFolder}/main.out.",
           //  "program":"${fileDirname}/main.out",
+            "program":"${fileDirname}/bin/${main}",
             "processId": "${command:pickProcess}",
-         //   "MIMode": "lldb"   
-            "MIMode": "gdb",
-        //    "name": "(gdb) Adjuntar",
-        //    "type": "cppdbg",
-        //    "request": "attach",
-        //    "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.out.",
-           "processId": "${command:pickProcess}",
-        //    "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Habilitar la impresión con sangría para gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description":  "Establecer tipo de desensamblado en Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
+            "MIMode": "lldb"
         }
-
-        
-
     ]
 }
