--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Attach by Process ID",
+        //    "processId": "${command:PickProcess}",
+            "processId": "${command:pickProcess}",
+            "request": "attach",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        
+        
+
+        {
             "name": "(lldb) Adjuntar",
             "type": "cppdbg",
             "request": "attach",
