--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -10,7 +10,7 @@
             "name": "(lldb) Adjuntar",
             "type": "cppdbg",
             "request": "attach",
-            "program":"${fileDirname}/main.out",
+            "program":"${fileDirname}/bin/b.out",
             "processId": "${command:pickProcess}",
             "MIMode": "lldb"
         }
