--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -1,19 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    //    ${workspaceFolder}/a.out.
-    "version": "0.2.0",
     "configurations": [
-        
-        {
-            "name": "(lldb) Adjuntar",
-            "type": "cppdbg",
-            "request": "attach",
-            "program":"${fileDirname}/bin/b.out",
-            "processId": "${command:pickProcess}",
-            "MIMode": "lldb"
-        }
 
+    {
+        "name": "(lldb) Iniciar",
+        "type": "cppdbg",
+        "request": "launch",
+    //    "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.out.",
+        "program": "${fileDirname}/bin/${fileBasenameNoExtension",
+        "args": [],
+        "stopAtEntry": false,
+        "cwd": "${fileDirname}",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "lldb"
+    }
     ]
 }
