--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -3,7 +3,7 @@
 
 
     {
-        "name": "(lldb) Launch",
+        "name": "(gdb) Launch",
         "type": "cppdbg",
         "request": "launch",
         "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
