--- a/programasC/.vscode/launch.json
+++ b/programasC/.vscode/launch.json
@@ -1,6 +1,6 @@
 {
     "configurations": [
-        {
+    {
         "name": "(gdb) Launch",
         "type": "cppdbg",
         "request": "launch",
@@ -10,7 +10,19 @@
         "cwd": "${fileDirname}",
         "environment": [],
         "externalConsole": false,
-        "MIMode": "lldb"
-    }
+        "MIMode": "gdb",
+        "setupCommands": [
+		{
+			"description”: “Enable pretty-printing for gob",
+			"text”: “-enable-pretty printing",
+			"ignoreFailures": true
+		},
+		{
+			"description”: “Set Disasembñy Flavor to Intel",
+			"text”: “-gdb-set disassembly-flavor intel",
+			"ignoreFailures": true
+		}
     ]
+}
+]
 }
