--- a/nuevo/.vscode/launch.json
+++ b/nuevo/.vscode/launch.json
@@ -3,7 +3,8 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [    
+    "configurations": 
+    [    
         {
             "configurations": 
         [
@@ -19,18 +20,18 @@
                 "externalConsole": false,
                 "MIMode": "gdb",
                 "setupCommands": 
-             [
-                {
-                    "description": "Enable pretty-printing for gob",
-                    "text": "-enable-pretty printing",
+                [
+                    {
+                        "description": "Enable pretty-printing for gob",
+                            "text": "-enable-pretty printing",
                     "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disasembñy Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-             ]
+                    },
+                    {
+                        "description": "Set Disasembñy Flavor to Intel",
+                        "text": "-gdb-set disassembly-flavor intel",
+                        "ignoreFailures": true
+                    }
+                ]
             }
         ]
         }
