--- a/nuevo/.vscode/launch.json
+++ b/nuevo/.vscode/launch.json
@@ -3,12 +3,9 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": 
-    [    
+    "configurations": [    
         {
-            "configurations": 
-        [
-            {
+    
                 "name": "(gdb) Launch",
                 "type": "cppdbg",
                 "request": "launch",
@@ -34,9 +31,7 @@
                 ]
             }
         ]
-        }
 
-    ]
 }
         
 
