--- a/nuevo/.vscode/launch.json
+++ b/nuevo/.vscode/launch.json
@@ -5,11 +5,10 @@
     "version": "0.2.0",
     "configurations": [    
         {
-    
-                "name": "(gdb) Launch",
+                "name": "Launch",
                 "type": "cppdbg",
                 "request": "launch",
-                "program": "${fileDirname}/${fileBasenameNoExtension}",
+                "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
                 "args": [],
                 "stopAtEntry": false,
                 "cwd": "${fileDirname}",
