--- a/nuevo/.vscode/launch.json
+++ b/nuevo/.vscode/launch.json
@@ -5,30 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
-           "type": "cppdbg",
-         //   "type": "lldb-mi",
-            "request": "launch",
-            "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": 
-            [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disasembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
+          "name": "clang++ - Build and debug active file",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
+          "args": [],
+          "stopAtEntry": true,
+          "cwd": "${workspaceFolder}",
+          "environment": [],
+          "externalConsole": false,
+          "MIMode": "lldb",
+          "preLaunchTask": "clang++ build active file"
         }
     ]
 }
