--- a/nuevo/.vscode/launch.json
+++ b/nuevo/.vscode/launch.json
@@ -1,21 +1,34 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-          "name": "clang++ - Build and debug active file",
-          "type": "cppdbg",
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+      {
+          "name": "(gdb) Launch",
+         "type": "cppdbg",
+       //   "type": "lldb-mi",
           "request": "launch",
           "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
           "args": [],
-          "stopAtEntry": true,
-          "cwd": "${workspaceFolder}",
+          "stopAtEntry": false,
+          "cwd": "${fileDirname}",
           "environment": [],
           "externalConsole": false,
           "MIMode": "lldb",
-          "preLaunchTask": "clang++ build active file"
-        }
-    ]
+          "setupCommands": 
+          [
+              {
+                  "description": "Enable pretty-printing for gdb",
+                  "text": "-enable-pretty-printing",
+                  "ignoreFailures": true
+              },
+              {
+                  "description": "Set Disasembly Flavor to Intel",
+                  "text": "-gdb-set disassembly-flavor intel",
+                  "ignoreFailures": true
+              }
+          ]
+      }
+  ]
 }
