--- a/desdecero/.vscode/launch.json
+++ b/desdecero/.vscode/launch.json
@@ -5,30 +5,32 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
-           "type": "cppdbg",
-         //   "type": "lldb-mi",
-            "request": "launch",
-            "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
+            "name": "(gdb) Asociación de canalización",
+            "type": "cppdbg",
+            "request": "attach",
+           "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.out.",
+         //   "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
+            "processId": "${command:pickRemoteProcess}",
+            "pipeTransport": {
+                "debuggerPath": "/usr/bin/gdb",
+                "pipeProgram": "/usr/bin/ssh",
+                "pipeArgs": [],
+                "pipeCwd": ""
+            },
             "MIMode": "gdb",
-            "setupCommands": 
-            [
+            "setupCommands": [
                 {
-                    "description": "Enable pretty-printing for gdb",
+                    "description": "Habilitar la impresión con sangría para gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 },
                 {
-                    "description": "Set Disasembly Flavor to Intel",
+                    "description":  "Establecer tipo de desensamblado en Intel",
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
                 }
             ]
         }
+
     ]
 }
