--- a/desdecero/.vscode/launch.json
+++ b/desdecero/.vscode/launch.json
@@ -3,34 +3,33 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [    
         {
-            "name": "(gdb) Asociación de canalización",
-            "type": "cppdbg",
-            "request": "attach",
-           "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.out.",
-         //   "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
-            "processId": "${command:pickRemoteProcess}",
-            "pipeTransport": {
-                "debuggerPath": "/usr/bin/gdb",
-                "pipeProgram": "/usr/bin/ssh",
-                "pipeArgs": [],
-                "pipeCwd": ""
-            },
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Habilitar la impresión con sangría para gdb",
-                    "text": "-enable-pretty-printing",
+                "name": "Launch",
+                "type": "cppdbg",
+                "request": "launch",
+                "program": "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "args": [],
+                "stopAtEntry": false,
+                "cwd": "${fileDirname}",
+                "environment": [],
+                "externalConsole": false,
+                "MIMode": "gdb",
+                "setupCommands": 
+                [
+                    {
+                        "description": "Enable pretty-printing for gob",
+                            "text": "-enable-pretty printing",
                     "ignoreFailures": true
-                },
-                {
-                    "description":  "Establecer tipo de desensamblado en Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
-        }
+                    },
+                    {
+                        "description": "Set Disasembñy Flavor to Intel",
+                        "text": "-gdb-set disassembly-flavor intel",
+                        "ignoreFailures": true
+                    }
+                ]
+            }
+        ]
 
-    ]
 }
+  
